Add Integration and Unit tests framework
Signed-off-by: Zlatozar Zhelyazkov <zlatozar@gmail.com>