@@ -92,6 +92,26 @@ http://www.w3.org/2001/XMLSchema-instance ">
                 </configuration>
             </plugin>
 
+            <!-- Unit tests -->
+            <plugin>
+                <!-- To debug JUnit tests from IDE please run like this:
+                mvn -Dmaven.surefire.debug="-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000 -Xnoagent -Djava.compiler=NONE" test
+                -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12.3</version>
+                <configuration>
+                    <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=256m -Dfile.encoding=utf-8</argLine>
+                    <!-- Run only tests that are not annotated or annotated with @UnitTest.
+
+                         NOTE: To see how test are collected (find which are disabled)
+                               see src/test/java/com/suites/util/ClasspathClassesFinder.java -->
+                    <includes>
+                        <include>**/RunAllUnitTests.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
+
             <!-- Static analysers -->
             <plugin>
                 <artifactId>maven-checkstyle-plugin</artifactId>
@@ -180,6 +200,39 @@ http://www.w3.org/2001/XMLSchema-instance ">
         </plugins>
 
     </build>
+    <profiles>
+        <profile>
+            <!-- This profile is used to run all unit and integration test -->
+            <id>integrator</id>
+            <activation>
+                <property>
+                    <name>integrator</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.18</version>
+                        <configuration>
+                            <argLine>-server -XX:+AggressiveOpts -XX:+UseParNewGC
+                                -XX:+UseConcMarkSweepGC -XX:NewRatio=3 -Xms512m -Xmx1024m
+                                -XX:MaxPermSize=512m -Dfile.encoding=utf-8 -Dlog.level=SEVERE
+                            </argLine>
+                            <!-- Run all tests -->
+                            <includes>
+                                <include>**/RunAllUnitTests.java</include>
+                                <!-- Integration test are tests are annotated with @IntegrationTest -->
+                                <include>**/RunAllIntegrationTests.java</include>
+                            </includes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <!-- ================================= -->
     <!-- DEPENDENCIES(versions up to date) -->
